--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "omegafox",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://omegafox.me/home/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "react-scrollspy": "^3.3.5"
   },
   "scripts": {
